<resources>
    <string name="appname">Bloomain</string>
    <string name="login">Entrar</string>
    <string name="register">Criar conta</string>
    <string name="registerhint">Ainda não tem conta?</string>
    <string name="welcome">Bem-vindo ao Bloomain!</string>
    <string name="profileBio">Bio</string>
    <string name="editprofile">Editar Perfil</string>
    <string name="username">Nome Do Utilizador</string>
    <string name="back">Voltar</string>
    <string name="like">Gosto</string>
    <string name="comment">Comentários</string>
    <string name="send">Partilha</string>
    <string name="avatar">Utilizador</string>
    <string name="menu">Menu</string>
    <string name="post_image">Imagem\n</string>
    <string name="aboutproject">Sobre o Projeto\n</string>
    <string name="bachelor">Licenciatura em Engenharia Informática</string>
    <string name="course">Desenvolvimento de Aplicações Móveis</string>
    <string name="courseyear">Ano Letivo: 2025/26</string>
    <string name="authors">Autores</string>
    <string name="firstauthor">Pedro Brito 25939</string>
    <string name="secondauthor">Catarina Pereira 25976</string>
    <string name="librariestitle">Bibliotecas, frameworks e códigos de terceiros</string>
    <string name="librariescontent">• Retrofit 2 \\n• GSON Converter\\n• Bcrypt \\n• Node.js\\n• Mongoose \\n• Material Design \\n• Express</string>
    <string name="backtologin">Voltar ao Início</string>
    <string name="writecomment">Escreve um comentário...</string>
    <string name="sendcomment">Enviar</string>
    <string name="newposttitle">Enviar</string>
    <string name="takepostphoto">Tirar Foto</string>
    <string name="writepostdescription">Escreve uma legenda...</string>
    <string name="postlocation">Localização (Opcional)\"</string>
    <string name="selectpostlocation">Selecionar Localização</string>
    <string name="publishpost">Publicar Post</string>
    <string name="newusername">Novo Nome de Utilizador</string>
    <string name="newusernamehint">Nome de Utilizador</string>
    <string name="newbiography">Nova Biografia</string>
    <string name="newbiographyhint">Biografia</string>
    <string name="newpassword">Nova Palavra-passe</string>
    <string name="newpasswordhint">Palavra-passe</string>
    <string name="newpasswordconfirmation">Confirmar Nova Palavra-passe</string>
    <string name="newpasswordconfirmationhint">Confirmar Palavra-passe</string>
    <string name="savechanges">Guardar Alterações</string>
    <string name="cancel">Cancelar</string>
    <string name="profilePhoto">Foto de Perfil</string>
    <string name="chooseprofilephoto">Escolher da galeria</string>
    <string name="createpost">Criar Post</string>
    <string name="search">Pesquisar</string>
    <string name="searchusers">Procurar utilizadores...</string>
    <string name="confirmlocation">Confirmar Localização</string>
    <string name="commenttext">Texto do comentário</string>
    <string name="deletecomment">Apagar comentário</string>
    <string name="timepastpost">Há algum tempo</string>
    <string name="email">Email</string>
    <string name="password">Palavra-passe</string>
    <string name="aboutauthors">Sobre os autores</string>
    <string name="deletepost">Apagar Publicação</string>
    <string name="usernameanddescription">Nome de Utilizador Legenda do post...</string>
    <string name="allpostcomments">Ver todos os comentários</string>
    <string name="addpostphoto">Adicionar imagem</string>
    <string name="writedescription">Escrever descrição...</string>
    <string name="zero">0</string>
    <string name="postscount">Publicações</string>
    <string name="followers">Seguidores</string>
    <string name="followed">A seguir</string>
    <string name="chooseprofilephotofirst">Tocar para escolher foto</string>
    <string name="confirmpassword">Confirme Palavra-passe</string>
    <string name="createaccount">Criar Conta</string>
    <string name="settings">Definições</string>
</resources>