<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_earth_brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newposttitle"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#000000" />

        <Button
            android:id="@+id/btnCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takepostphoto"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/editCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/writepostdescription"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postlocation"
            android:layout_marginTop="16dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btnOpenMap"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/selectpostlocation"
            android:textColor="#2E7D32"
            app:strokeColor="#2E7D32"
            app:icon="@android:drawable/ic_dialog_map" />

        <Button
            android:id="@+id/btnPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publishpost"
            android:backgroundTint="#2E7D32"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"/>

    </LinearLayout>
</ScrollView>