<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:background="@color/light_earth_brown">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCommentAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_oficial_bloomainv2"
        app:shapeAppearanceOverlay="@style/CircleImage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCommentUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tvCommentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commenttext" />

        <TextView
            android:id="@+id/tvCommentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timepastpost"
            android:textSize="12sp"
            android:textColor="#808080" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnDeleteComment"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/deletecomment"
        android:backgroundTint="@android:color/holo_red_dark"
        android:visibility="gone" /> </LinearLayout>