<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/coffee_brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_oficial_bloomainv2" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:text="@string/username"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/charcoal" />

            <ImageButton
                android:id="@+id/btn_delete_post"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/deletepost"
                app:tint="#888888"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="8dp" />
        </LinearLayout>

        <!-- Post Image -->
        <ImageView
            android:id="@+id/iv_post_image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            android:contentDescription="@string/post_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/btn_like"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/heart_outline"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/like"
                    app:tint="@color/red" />




            </LinearLayout>

            <!-- Spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/comment"
                android:src="@drawable/ic_add_comment"
                app:tint="@color/charcoal" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="4dp"
            android:text="1.234 gostos"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/leaf_green" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="4dp"
            android:text="@string/usernameanddescription"
            android:textSize="14sp"
            android:textColor="@color/more_light_brown" />

        <TextView
            android:id="@+id/tv_view_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allpostcomments"
            android:textColor="@color/clay_orange"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:textColor="#757575"
            android:layout_marginLeft="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="12dp"
            android:text="@string/timepastpost"
            android:textColor="@color/moss_green"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
